versioned_docs/version-3.0/app-store-connection-configuration.md
---
title: "Configure App Store integration"
description: "Configure your App Store connection for seamless subscription tracking."
metadataTitle: "App Store Connection Configuration | Adapty Docs"
---

import Zoom from 'react-medium-image-zoom';
import 'react-medium-image-zoom/dist/styles.css';
import ProvideBundleID from '@site/src/components/reusable/ProvideBundleID.md';

This section describes how to establish the connection between the App Store and Adapty for your iOS app. This is required for us to be able to show subscription analytics and validate purchases. You can complete the integration during the initial onboarding or later in the **App Settings** within the Adapty Dashboard.

Although you might have initially configured the integration of your mobile app and Adapty during onboarding, you can modify these settings later in the **App settings**. 

:::danger
Configuration changes can be done safely during the Sandbox phase, until your mobile app goes live with Adapty SDK installed. Changes after the release can break the purchase flow in your app.
:::

## Step 1. Provide Bundle ID and Apple app ID

Bundle ID is the unique identifier of your app in the App Store. This is required for the basic functionality of Adapty, such as subscription processing.

<ProvideBundleID />


## Step 2. Provide Issuer ID and Key ID

The **In-app purchase Issuer ID**, referred to as **Issuer ID** in App Store Connect, is a special ID that identifies the issuer who created the authentication token. The **In-App Purchase Key ID**, referred to as **Key ID** in App Store Connect, is a unique identifier associated with a cryptographic key you've generated in the [Generate In-App Purchase Key in App Store Connect](generate-in-app-purchase-key) section.  

1. Open **App Store Connect**. Proceed to [**Users and Access** → **Integrations** → **In-App Purchase**](https://appstoreconnect.apple.com/access/integrations/api/subs) section.
2. In the **Active** list, find the key you've created in the [Generate In-App Purchase Key in App Store Connect](generate-in-app-purchase-key) section.

   

<Zoom>
  <img src={require('./img/19a2868-issuer_apple.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>



3. Copy **Issuer ID** and paste it to the **In-app purchase Issuer ID** field in the Adapty Dashboard.

   

<Zoom>
  <img src={require('./img/c2b42e7-issuer_id.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>



4. Copy the **Key ID** and paste it to the **In-app purchase Key ID** field in the Adapty Dashboard.

## Step 3. Upload In-App Purchase Key file

Upload the **In-App Purchase Key** file you've downloaded in the [Generate In-App Purchase Key in App Store Connect](generate-in-app-purchase-key) section 


<Zoom>
  <img src={require('./img/88cdfff-download_inapp_file.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>



into the **Private key (.p8 file)** field in the Adapty Dashboard.


<Zoom>
  <img src={require('./img/253b840-in-app_file_upload.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>



## Step 4. For trials and special offers – set up promotional offers

:::important
This step is required if your app has trials or other promotional offers.
:::

1. Copy the same key ID you used in [Step 2](#step-2-provide-issuer-id-and-key-id) to the **Subscription key ID** field in the **App Store promotional offers** section. 
2. Upload the same **In-App Purchase Key** file you used in [Step 3](#step-3-upload-in-app-purchase-key-file) to the **Subscription key (.p8 file)** area in the **App Store promotional offers** section.

<Zoom>
  <img src={require('./img/promo-key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

## Step 5. Enter App Store shared secret

The **App Store shared secret**, also known as the App Store Connect Shared Secret, is a 32-character hexadecimal string used for in-app purchases and subscription receipt validation.  

1. Open [App Store Connect](https://appstoreconnect.apple.com/apps). Select your app and proceed to **General** → **App Information** section.

2. Scroll down to the **App-Specific Shared Secret** sub-section.

   

<Zoom>
  <img src={require('./img/2bd112a-shared_secret_apple.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>




   :::info
   If the **App-Specific Shared Secret** sub-section is absent, make sure you have an Account Holder or Admin role. If you have an Admin role and yet cannot see the **App-Specific Shared Secret** sub-section, ask the Account Holder of the app (the person who has created the application in the App Store Connect) to generate the App Store shared secret for the app. After that, the sub-section will be shown to Admins as well.
   :::

3. Click the **Manage** button.

   

<Zoom>
  <img src={require('./img/2d8b4c0-shared_secret_apple_copy.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>




4. In the opened **App-Specific Shared Secret** window, copy the **Shared Secret**. If no shared secret is visible, first click either the **Manage** or **Generate** button whichever is available, and then copy the **Shared Secret**.

5. Paste the copied **Shared Secret** to the **App Store shared secret** field in the Adapty Dashboard. 

   

<Zoom>
  <img src={require('./img/4f9624d-shared_secret.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>




6. Click the **Save** button in the Adapty Dashboard to confirm the changes.

## Step 6. Add App Store Connect API key

Generate an App Store Connect API key and add it to Adapty to be able to [manage your products in the App Store from the Adapty dashboard](create-product#create-product-and-push-to-store):

1. In App Store Connect, go to [**Users and Access > Integrations > Team keys**](https://appstoreconnect.apple.com/access/integrations/api) and click **+**.

<Zoom>
  <img src={require('./img/app-store-connect-api.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

2. In the **Generate API key window**, enter a name for the key and grant it the **Admin** access.

<Zoom>
  <img src={require('./img/generate-api-key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

3. Click **Download** next to your key. Note that you can download it only once.

<Zoom>
  <img src={require('./img/download-api-key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

4. In the Adapty dashboard, go to [**App settings > iOS SDK**](https://app.adapty.io/settings/ios-sdk) and click **Connect API key**.

<Zoom>
  <img src={require('./img/connect-api-key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

5. Fill in the fields in the window:
   - **Issuer ID**: Copy from [**Users and Access > Integrations > Team keys**](https://appstoreconnect.apple.com/access/integrations/api). It is above the **API keys** table.

<Zoom>
  <img src={require('./img/issuer-id.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

   - **Key ID**: Copy from [**Users and Access > Integrations > Team keys**](https://appstoreconnect.apple.com/access/integrations/api). It is in the **API keys** table next to your key.

<Zoom>
  <img src={require('./img/key-id.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

   - **API key**: Upload the API key file you've downloaded from App Store Connect.

<Zoom>
  <img src={require('./img/app-store-connect-key.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '500px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

6. Click **Connect**.


**What's next**

- [Enable App Store server notifications](enable-app-store-server-notifications)